# ssr-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: gitea_publish.yml
examples/: actix.rs  actix_with_initial_props.rs  axum.rs  multi-thread.rs  rocket.rs  run.rs  run_esm.rs  run_iife.rs  tide.rs  warp.rs
examples/rspack-react/: server.rs
examples/vite-react/: server.rs
examples/vite-svelte/: Cargo.toml  vite.client.config.js  vite.ssr.config.js
examples/vite-svelte/backend/: main.rs
examples/webpack-react/: server.rs
src/: lib.rs  ssr.rs
tests/: react.rs  svelte.rs
tests/assets/: esm-module.js  svelte-4-esm.js
