[package]
name = "ssr_rs"
version = "0.5.5"
authors = ["Jerome <jeromeleong1998@gmail.com>", "Valerio <valerioageno@yahoo.it>"]
edition = "2021"
description = "Server side rendering with the v8 engine for parse and evaluate the javascript code"
readme = "./README.md"
homepage = "https://git.leongfamily.net/jerome/ssr-rs"
documentation = "https://docs.rs/ssr_rs"
repository = "https://git.leongfamily.net/jerome/ssr-rs"
keywords = ["web", "ssr", "react", "actix", "server-side-render"]
categories = ["web-programming"]
license-file = "./LICENSE_MIT"
autoexamples = false
include = [
    "src/*.rs",
    "Cargo.toml",
]

[lib]
name = "ssr_rs"
path = "src/lib.rs"

[dependencies]
lru = "0.12.3"
thread_local = "1.1.8"
v8= "0.104.0"

[dev-dependencies]

# Actix depencendies
actix-files = "0.6.4"
actix-web = "4"

# Warp dependencies
tokio = { version = "1", features = ["full"] }
warp = "0.3"

# Tide dependencies
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }

# Axum
axum = "0.7.4"

# Rocket dependencies
rocket = "0.5.0-rc.2"

# Salvo dependencies
salvo = { version = "0.71.1", features = ["serve-static"] }

serde_json = "1.0.118"
tracing = "0.1"
tracing-subscriber = "0.3"

env_logger = "0.11.5"

[[example]]
name = "actix"
path = "examples/actix.rs"

[[example]]
name = "tide"
path = "examples/tide.rs"

[[example]]
name = "actix-with-props"
path = "examples/actix_with_initial_props.rs"

[[example]]
name = "rocket"
path = "examples/rocket.rs"

[[example]]
name = "warp"
path = "examples/warp.rs"

[[example]]
name = "run_iife"
path = "examples/run_iife.rs"

[[example]]
name = "run_esm"
path = "examples/run_esm.rs"

[[example]]
name = "axum"
path = "examples/axum.rs"

[[example]]
name = "multi"
path = "examples/multi-thread.rs"
[[example]]
name = "vite-react"
path = "examples/vite-react/server.rs"

[[example]]
name = "webpack-react"
path = "examples/webpack-react/server.rs"

[[example]]
name = "rspack-react"
path = "examples/rspack-react/server.rs"

[[example]]
name = "vite-svelte"
path = "examples/vite-svelte/backend/main.rs"